Fix preferences back button glyph/text vertical alignment

--- a/styles/preferences.less
+++ b/styles/preferences.less
@@ -18,7 +18,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	margin-left: 10px;
 	margin-top: 9px;
 	padding: 0;
-	padding: 1px 13px 0px 5px;
+	padding: 0px 13px 0px 5px;
 
 	img.content-mask {
 		zoom: 0.3 !important;
